Show basic info in the popup.

--- a/extension/src/popup/popup.html
+++ b/extension/src/popup/popup.html
@@ -5,13 +5,17 @@
 <title>TrackTrackNo Popup</title>
 <style>
   body {
-    width: 400px;
-    height: 300px;
+    width: 200px;
+    height: 150px;
   }
 </style>
 </head>
 <body>
-<p>I'm the content</p>
+<main>
+  <p>Blocked: <span class='js-blocked'>?</span></p>
+  <p>Safelisted: <span class='js-safelisted'>?</span></p>
+</main>
+
 <script src='./popup.js'></script>
 </body>
 </html>
