--- a/extension/src/popup/popup.html
+++ b/extension/src/popup/popup.html
@@ -13,7 +13,7 @@
       <input type='checkbox' class='js-safelisted' id='safelisted'/>
       <label for='safelisted'>disabled for this domain</label>
     </p>
-    <p><a href='#'>Report issue</a></p>
+    <p><a href='https://github.com/kdzwinel/TrackTrackNo/issues/new'>Report issue</a></p>
 </main>
 
 <script src='./popup.js'></script>
